--- a/R for Data Science/analysis.Rmd
+++ b/R for Data Science/analysis.Rmd
@@ -14,13 +14,13 @@ library(plotly)
 ## 1. Read data
 
 ```{r results='hide', message=F, warning=F}
-data <- read_csv('./gapminder_clean.csv')
-data <- data %>%
+data <- read_csv('./gapminder_clean.csv') %>%
     select(-1) %>%
     rename(
        co2em = `CO2 emissions (metric tons per capita)`,
        popden = `Population density (people per sq. km of land area)`,
        lifeExp = `Life expectancy at birth, total (years)`,
+       energy = `Energy use (kg of oil equivalent per capita)`,
     )
 ```
 
@@ -82,6 +82,91 @@ ggplotly(fig, tooltip = "text")
 # Open section
 
 ## 1. Relationship between continent and energy use
+
+Can we perform ANOVA?
+
+### Normality
+
+Let's observe how normal the data is.
+
+```{r}
+data_energy <- data %>%
+    select(continent, energy) %>%
+    drop_na()
+ggplot(data_energy, mapping = aes(sample = energy)) +
+    facet_grid(continent ~ .) +
+    stat_qq() +
+    stat_qq_line()
+```
+
+Africa, Oceania and Europe look approximately normal, but the others do not.
+Notice that we can apply the logarithm to the energy usage data because they
+are all positive. We get an empty tibble when filtering for energy values less
+than or equal to zero.
+
+```{r}
+data_energy %>%
+    filter(energy <= 0)
+```
+
+Let's try the data transformation.
+
+```{r}
+data_energy_t <- data_energy %>%
+    mutate(energy_transformed = log(energy))
+ggplot(data_energy_t, mapping = aes(sample = energy_transformed)) +
+    facet_grid(continent ~ .) +
+    stat_qq() +
+    stat_qq_line()
+```
+
+The data look more normal now. Even though they are not perfect, we have a relatively large sample size for each group, except Oceania. Oceania, though, looks the most normal out of all of them.
+
+```{r}
+data_energy_t %>%
+    group_by(continent) %>%
+    summarise(count = n())
+```
+
+### Independence
+
+The data come from different continents and are at least 5 years apart. Assume
+the data are independent due to the space and time separation.
+
+### Equality of variances
+
+How do the variances look?
+
+```{r}
+ggplot(data_energy_t) +
+    geom_boxplot(mapping = aes(energy_transformed, continent)) +
+    xlab("Log of energy usage (kg of oil equivalent per capita)") +
+    ylab("Continent")
+```
+
+The variances of the transformed data look roughly the same. Oceania stands out
+as having a smaller variance than the others. Despite this, we will continue.
+
+### ANOVA
+
+```{r}
+test_results <- aov(energy_transformed ~ continent, data = data_energy_t)
+summary.aov(test_results)
+```
+
+The p-value is less than 0.001. In our assumptions, we saw that the transformed
+data were not exactly normal, and their variances were not exactly equal.
+Taking that into account, I still think we can reject the null hypothesis. That
+is, we reject that the log of the group means are equal. Since the logarithm is
+a monotone increasing function, we also reject that the group means are equal.
+
+### Post hoc testing via Tukey's
+
+```{r}
+TukeyHSD(test_results)
+```
+
+For every pair except for (Asia, Americas) and (Oceania, Europe), we reject the null hypothesis that the logarithm of the energy usage means are the same.
 
 ## 2. Difference of imports between Europe and Asia
 
